package eu.epfc.anc3.model;

public enum ActualStateEnum {
    GRASS,
    CARROT_1,
    CARROT_2,
    CARROT_3,
    CARROT_4,
    CARROT_ROTTEN,
    CABBAGE_1,
    CABBAGE_2,
    CABBAGE_3,
    CABBAGE_4,
    CABBAGE_ROTTEN
}
