package eu.epfc.anc3.model;

public enum GameStatus {
    STARTED,
    NOT_STARTED
}
